add OpenStack command

--- a/Linux/卸载挂载盘01.md
+++ b/Linux/卸载挂载盘01.md
@@ -53,3 +53,10 @@
 # vim /etc/fstab
 ```
 
+附录
+
+- 问题汇总  
+  
+| 问题      | 规避方法           |
+| :------------- |:-------------|
+| 卸载磁盘，提示磁盘正忙      | 使用fuser找出正在使用该磁盘的程序，然后结束掉即可(fuser -m -v /data;fuser -m -v -i -k /data) |
